render todo item w/ checkbox input

--- a/client/src/components/TodoInput/TodoInput.scss
+++ b/client/src/components/TodoInput/TodoInput.scss
@@ -1,8 +1,9 @@
-.todo__form {
+.todo-form {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 
   input[type='text'] {
     padding: 10px 15px;
