create update flag to rerender on add and update of tasks

--- a/client/src/components/Todo/Todo.scss
+++ b/client/src/components/Todo/Todo.scss
@@ -7,19 +7,37 @@
   font-weight: 400;
 
   &-checkbox {
+    cursor: pointer;
     margin: 5px 0;
+    flex: 1;
+
+    & > * {
+      cursor: pointer;
+    }
   }
 
   input[type='checkbox'] {
     margin-right: 10px;
   }
 
+  label {
+    flex: 1;
+  }
+
+  &-completed {
+    text-decoration: line-through;
+  }
+
+  &-edit {
+    margin-right: 5px;
+  }
+
   &-delete {
     cursor: pointer;
     background: #bd1f36;
     border: none;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     flex-shrink: 0;
     color: #fff;
 
