--- a/client/src/components/Todo/Todo.scss
+++ b/client/src/components/Todo/Todo.scss
@@ -1,15 +1,25 @@
 .todo {
-  width: 350px;
+  width: 100%;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 16px;
   font-weight: 400;
+  flex: 1;
+  padding: 5px 20px;
+
+  &:nth-child(odd) {
+    background-color: #caf0f8;
+  }
 
   &-checkbox {
     cursor: pointer;
     margin: 5px 0;
     flex: 1;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 
     & > * {
       cursor: pointer;
@@ -29,16 +39,38 @@
   }
 
   &-edit {
+    cursor: pointer;
     margin-right: 5px;
+    align-self: flex-start;
+    background: #fff;
+    color: #40916c;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: 1px solid #40916c;
+    border-radius: 5px;
+    min-width: 50px;
+    padding: 2px 1px;
+    margin-right: 10px;
+    box-shadow: 0 3px #52b788;
+
+    &:active {
+      box-shadow: 0 1px #52b788;
+      transform: translateY(2px);
+    }
+
+    &:hover {
+      background: #40916c;
+      color: #fff;
+    }
   }
 
   &-delete {
     cursor: pointer;
     background: #bd1f36;
     border: none;
+    border-radius: 5px;
     width: 20px;
     height: 20px;
-    flex-shrink: 0;
     color: #fff;
 
     &:hover {
