--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 body,
 html {
-  box-sizing: border-box;
   width: 100%;
   height: 100vh;
 }
@@ -11,5 +14,10 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 700px;
+  max-width: 800px;
+  padding: 0 10px;
+}
+
+h1 {
+  color: #1d3557;
 }
