--- a/client/src/components/TodoList/TodoList.scss
+++ b/client/src/components/TodoList/TodoList.scss
@@ -1,14 +1,22 @@
-.todo-list {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  list-style: none;
-}
+.list-container {
+  padding: 10px 0;
+  border-top: 1px solid #8d99ae;
+  border-bottom: 1px solid #8d99ae;
+  width: 100%;
 
-.todo-empty {
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
+  .todo-list {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+  }
+
+  .todo-empty {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+  }
 }
