--- a/client/src/components/Todo/Todo.scss
+++ b/client/src/components/Todo/Todo.scss
@@ -30,10 +30,6 @@
     margin-right: 10px;
   }
 
-  label {
-    flex: 1;
-  }
-
   &-completed {
     text-decoration: line-through;
   }
@@ -62,19 +58,34 @@
       background: #40916c;
       color: #fff;
     }
+
+    &:disabled {
+      cursor: default;
+      background-color: #4a4e69;
+      box-shadow: 0 3px #22223b;
+      color: #fff;
+      border: none;
+      transform: translateY(0px);
+    }
   }
 
   &-delete {
     cursor: pointer;
     background: #bd1f36;
+    box-shadow: 0 3px #6a040f;
     border: none;
-    border-radius: 5px;
+    border-radius: 6px;
     width: 20px;
     height: 20px;
     color: #fff;
 
     &:hover {
       background: #e01e37;
+    }
+
+    &:active {
+      box-shadow: 0 1px #bd1f36;
+      transform: translateY(2px);
     }
   }
 }
